* Added style to dynamically resize content and prevent text wrapping

--- a/src/scss/_body.scss
+++ b/src/scss/_body.scss
@@ -323,7 +323,6 @@ section{
         }
         .project-content{
           padding: 65px 25px 25px;
-          max-width: 40%;
           .date{
             &:before{
               content: 'When: ';
